[package]
name = "too_lua"
version = "0.1.0"
edition = "2021"

[dependencies]
too = { git = "https://github.com/museun/too", branch = "too_lua" }
anno_lua = { git = "https://github.com/museun/anno_lua", version = "0.1.0", branch = "dev" }

# NOTE the minimum supported lua is 5.3 (for integers)
mlua = { version = "0.10.3", features = [ "lua54", "error-send", "send", "async" ] }
slotmap = "1.0.7"

tokio = { version = "1.43.0", features = [ "rt" ] }
tokio-stream = "0.1.17"
profiling = "1.0.16"

[dev-dependencies]
futures-util = { version = "0.3.31", default-features = false, features = [ "std", "async-await-macro", "async-await" ] }
profiling = { version = "1.0.16", features = [ "profile-with-puffin" ] }
puffin_http = "0.16.1"
tokio = { version = "1.43.0", features = [ "rt-multi-thread" ] }
too = { git = "https://github.com/museun/too", branch = "too_lua", features = [ "profile" ] }
